Actualizacion de links de archivos del proyecto

--- a/Frontend/html/Animal.html
+++ b/Frontend/html/Animal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/Animal.css">
+    <link rel="stylesheet" href="/Frontend/css/Animal.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
     <!-- jQuery y JavaScript de Bootstrap -->
@@ -27,7 +27,7 @@
 
     <!-- Imagen del animal con nombre encima -->
     <section class="Img-animal">
-        <img src="/images/OsoAnteojos.jpg" alt="Oso de Anteojos">
+        <img src="/Frontend/images/OsoAnteojos.jpg" alt="Oso de Anteojos">
         <div class="nombre">
             <h1>Oso de Anteojos</h1>
             <h2><i>Tremarctos ornatus</i></h2>
@@ -46,49 +46,49 @@
         
         <div class="column">
             <div class="characteristic">
-                <img src="/images/iconos/Tamaño.png" alt="Tamaño" width="25" height="25">
+                <img src="/Frontend/images/iconos/Tamaño.png" alt="Tamaño" width="25" height="25">
                 <div class="content-characteristic">
                     <label>Tamaño:</label>
                     <p>Entre 1.5 m y 2 m de largo.</p>
                 </div>
             </div>
             <div class="characteristic">
-                <img src="/images/iconos/Peso.png" alt="Peso" width="30" height="30">
+                <img src="/Frontend/images/iconos/Peso.png" alt="Peso" width="30" height="30">
                 <div class="content-characteristic">
                     <label for="">Peso:</label>
                     <p>Entre 100 y 175 kg.</p> 
                 </div>
             </div>
             <div class="characteristic">
-                <img src="/images/iconos/Colores.png" alt="Coloración" width="30" height="30">
+                <img src="/Frontend/images/iconos/Colores.png" alt="Coloración" width="30" height="30">
                 <div class="content-characteristic">
                     <label for="">Coloración</label>
                     <p>Pelaje negro con marcas blancas o beige en el rostro y pecho.</p>
                 </div>
             </div>
             <div class="characteristic">
-                <img src="/images/iconos/world.png" alt="Habitats" width="30" height="30">
+                <img src="/Frontend/images/iconos/world.png" alt="Habitats" width="30" height="30">
                 <div class="content-characteristic">
                     <label for="">Hábitat</label>
                     <p>Bosques nublados y páramos andinos.</p>
                 </div>
             </div>
             <div class="characteristic">
-                <img src="/images/iconos/Comida.png" alt="Dieta" width="30" height="30">
+                <img src="/Frontend/images/iconos/Comida.png" alt="Dieta" width="30" height="30">
                 <div class="content-characteristic">
                     <label for="">Dieta</label>
                     <p>Principalmente herbívoro, consumiendo frutas, hojas y cortezas.</p>
                 </div>
             </div>
             <div class="characteristic">
-                <img src="/images/iconos/moon.png" alt="Luna" width="35" height="35">
+                <img src="/Frontend/images/iconos/moon.png" alt="Luna" width="35" height="35">
                 <div class="content-characteristic">
                     <label for="">Comportamiento</label>
                     <p>Solitario y de hábitos nocturnos.</p>
                 </div>
             </div>
             <div class="characteristic">
-                <img src="/images/iconos/conservacion.png" alt="Conservacion" width="30" height="30">
+                <img src="/Frontend/images/iconos/conservacion.png" alt="Conservacion" width="30" height="30">
                 <div class="content-characteristic">
                     <label for="">Estado de Conservación</label>
                     <p>Vulnerable, amenazado por la pérdida de hábitat y caza furtiva.</p>
@@ -105,13 +105,13 @@
             <div id="carouselExample" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="OsoAnteojos.jpg" class="d-block w-100" alt="Oso de Anteojos 1">
+                    <img src="/Frontend/images/OsoAnteojos.jpg" class="d-block w-100" alt="Oso de Anteojos 1">
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/Jaguar.png" class="d-block w-100" alt="Oso de Anteojos 2">
+                    <img src="/Frontend/images/oso2.jfif" class="d-block w-100" alt="Oso de Anteojos 2">
                 </div>
                 <div class="carousel-item">
-                    <img src="Jaguar-removebg-preview.png" class="d-block w-100" alt="Oso de Anteojos 3">
+                    <img src="/Frontend/images/Oso1.jpg" class="d-block w-100" alt="Oso de Anteojos 3">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
