--- a/Frontend/html/index.html
+++ b/Frontend/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fauna Colombiana</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/Frontend/css/style.css">
 
 </head>
 <body>
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="#" class="sitios">Hábitats</a></li>
                 <li><a href="#end" class="informacion">Sobre Nosotros</a></li>
-                <li><a href="/html/Animal.html" class="but-animal">Animales</a></li>
+                <li><a href="/Frontend/html/Animal.html" class="but-animal">Animales</a></li>
             </ul>
         </nav>
     </header>
@@ -22,14 +22,14 @@
     <main>
         <section class="cita">
             <div class="imagenes">
-                <img src="/images/Jaguar.png" alt="">
+                <img src="Frontend/images/Jaguar.png" alt="">
             </div>
             <div class="contenido">
                 <h1>Descubre una Colombia salvaje llena de criaturas fantásticas y sorprendentes</h1>
                 <a href="#" class="but-exp">Explora</a>
             </div>
             <div class="imagenes">
-                <img src="/images/Guacamaya.png" alt="">
+                <img src="Frontend/images/Guacamaya.png" alt="">
             </div>
         </section>
 
