--- a/Frontend/html/index.html
+++ b/Frontend/html/index.html
@@ -22,14 +22,14 @@
     <main>
         <section class="cita">
             <div class="imagenes">
-                <img src="Frontend/images/Jaguar.png" alt="">
+                <img src="/Frontend/images/Jaguar.png" alt="">
             </div>
             <div class="contenido">
                 <h1>Descubre una Colombia salvaje llena de criaturas fantásticas y sorprendentes</h1>
                 <a href="#" class="but-exp">Explora</a>
             </div>
             <div class="imagenes">
-                <img src="Frontend/images/Guacamaya.png" alt="">
+                <img src="/Frontend/images/Guacamaya.png" alt="">
             </div>
         </section>
 
