Links Lista de Animales

--- a/Frontend/html/ListaAnimales.html
+++ b/Frontend/html/ListaAnimales.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/ListaAnimales.css">
+    <link rel="stylesheet" href="/Frontend/css/ListaAnimales.css">
     <title>Animales</title>
 </head>
 <body>
@@ -51,7 +51,7 @@
     <section>
         <div class="animales">
             <div class="img-animal">
-                <img src="OsoAnteojosre.jpg" alt="Oso-Anteojos">
+                <img src="/Frontend/images/OsoAnteojosre.jpg" alt="Oso-Anteojos">
             </div>
             
             <h3>Oso de Anteojos</h3>
