Avance Pagina de animales y lista de animales

--- a/Frontend/html/ListaAnimales.html
+++ b/Frontend/html/ListaAnimales.html
@@ -49,23 +49,41 @@
     </section>
     
     <section class="animales">
-        <a href="/animal/oso-anteojos" class="animal-card">
+        <a href="/Frontend/html/Animal.html" class="animal-card">
             <img class="img-animal" src="/Frontend/images/OsoAnteojosre.jpg" alt="Oso de Anteojos">
             <h3>Oso de Anteojos</h3>
             <h5>Tremarctos ornatus</h5>
             <p>Páramos</p>
         </a>
-        <a href="/animal/armadillo" class="animal-card">
-            <img class="img-animal" src="/Frontend/images/Armadillo.jpg" alt="Armadillo">
+        <a href="/Frontend/html/animal1.html" class="animal-card">
+            <img class="img-animal" src="/Frontend/images/ListaAnimales/Armadillo.jpg" alt="Armadillo">
             <h3>Armadillo</h3>
             <h5>Dasypodidae</h5>
             <p>Oriente Colombiano</p>
         </a>
-        <a href="/animal/mojarra" class="animal-card">
-            <img class="img-animal" src="/Frontend/images/Mojarra.jpg" alt="Mojarra">
-            <h3>Mojarra</h3>
-            <h5>Gerreidae</h5>
+        <a href="/Frontend/html/Animal.html" class="animal-card">
+            <img class="img-animal" src="/Frontend/images/ListaAnimales/elcóndordelosandes.jpg" alt="CondorAndes">
+            <h3>Condor de los Andes</h3>
+            <h5>Vultur gryphus</h5>
             <p>Centro Colombiano</p>
+        </a>
+        <a href="/Frontend/html/Animal.html" class="animal-card">
+            <img class="img-animal" src="/Frontend/images/ListaAnimales/elcóndordelosandes.jpg" alt="CondorAndes">
+            <h3>Condor de los Andes</h3>
+            <h5>Vultur gryphus</h5>
+            <p>Centro Colombiano</p>
+        </a>
+        <a href="/Frontend/html/Animal.html" class="animal-card">
+            <img class="img-animal" src="/Frontend/images/ListaAnimales/elcóndordelosandes.jpg" alt="CondorAndes">
+            <h3>Condor de los Andes</h3>
+            <h5>Vultur gryphus</h5>
+            <p>Centro Colombiano</p>
+        </a>
+        <a href="/Frontend/html/animal1.html" class="animal-card">
+            <img class="img-animal" src="/Frontend/images/ListaAnimales/Armadillo.jpg" alt="Armadillo">
+            <h3>Armadillo</h3>
+            <h5>Dasypodidae</h5>
+            <p>Oriente Colombiano</p>
         </a>
     </section>
     
