--- a/Frontend/html/animal1.html
+++ b/Frontend/html/animal1.html
@@ -12,7 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <title>Oso de Anteojos</title>
+    <title>Armadillo</title>
 </head>
 <body>
     <!-- Barra de navegación -->
@@ -27,21 +27,19 @@
 
     <!-- Imagen del animal con nombre encima -->
     <section class="Img-animal">
-        <img src="/Frontend/images/OsoAnteojos.jpg" alt="Oso de Anteojos">
+        <img src="/Frontend/images/ListaAnimales/armadillo2.jpg" alt="Armadillo">
         <div class="nombre">
-            <h1>Oso de Anteojos</h1>
-            <h2><i>Tremarctos ornatus</i></h2>
+            <h1>Armadillo</h1>
+            <h2><i>Dasypodidae</i></h2>
         </div>
     </section>
     <!-- Descripción general y Características -->
     <section class="content">
-        <div class="column">
+        <div id="descripcionGeneral" class="column">
             <h3>Descripción General</h3>
-            <p>El Oso de Anteojos (<i>Tremarctos ornatus</i>) es el único oso nativo de América del Sur. 
-            Se distingue por las marcas blancas alrededor de sus ojos que le dan apariencia de "anteojos".
-            Habita en los bosques andinos de Colombia y otros países, alimentándose principalmente 
-            de frutas y plantas. Es una especie solitaria y nocturna, catalogada como vulnerable 
-            debido a la pérdida de su hábitat.</p>
+            <p>El armadillo (<i>Dasypodidae</i>) es un mamífero conocido por su caparazón duro que lo protege de depredadores. 
+            Habita en diversas regiones de América, incluyendo bosques, sabanas y zonas semiáridas. Se alimenta de insectos, pequeños vertebrados y plantas.
+            Es un animal nocturno, con hábitos principalmente solitarios y que excava madrigueras para refugiarse.</p>
         </div>
         
         <div class="column">
@@ -49,49 +47,49 @@
                 <img src="/Frontend/images/iconos/Tamaño.png" alt="Tamaño" width="25" height="25">
                 <div class="content-characteristic">
                     <label>Tamaño:</label>
-                    <p>Entre 1.5 m y 2 m de largo.</p>
+                    <p>Entre 30 cm y 1.5 m, dependiendo de la especie.</p>
                 </div>
             </div>
             <div class="characteristic">
                 <img src="/Frontend/images/iconos/Peso.png" alt="Peso" width="30" height="30">
                 <div class="content-characteristic">
                     <label for="">Peso:</label>
-                    <p>Entre 100 y 175 kg.</p> 
+                    <p>De 2 a 60 kg, según la especie.</p> 
                 </div>
             </div>
             <div class="characteristic">
                 <img src="/Frontend/images/iconos/Colores.png" alt="Coloración" width="30" height="30">
                 <div class="content-characteristic">
                     <label for="">Coloración</label>
-                    <p>Pelaje negro con marcas blancas o beige en el rostro y pecho.</p>
+                    <p>Grisáceo o marrón, con un caparazón duro.</p>
                 </div>
             </div>
             <div class="characteristic">
-                <img src="/Frontend/images/iconos/world.png" alt="Habitats" width="30" height="30">
+                <img src="/Frontend/images/iconos/world.png" alt="Hábitats" width="30" height="30">
                 <div class="content-characteristic">
                     <label for="">Hábitat</label>
-                    <p>Bosques nublados y páramos andinos.</p>
+                    <p>Bosques, sabanas y zonas semiáridas de América.</p>
                 </div>
             </div>
             <div class="characteristic">
                 <img src="/Frontend/images/iconos/Comida.png" alt="Dieta" width="30" height="30">
                 <div class="content-characteristic">
                     <label for="">Dieta</label>
-                    <p>Principalmente herbívoro, consumiendo frutas, hojas y cortezas.</p>
+                    <p>Principalmente insectívoro, pero también se alimenta de pequeños animales y plantas.</p>
                 </div>
             </div>
             <div class="characteristic">
                 <img src="/Frontend/images/iconos/moon.png" alt="Luna" width="35" height="35">
                 <div class="content-characteristic">
                     <label for="">Comportamiento</label>
-                    <p>Solitario y de hábitos nocturnos.</p>
+                    <p>Solitario y nocturno, excavador de madrigueras.</p>
                 </div>
             </div>
             <div class="characteristic">
-                <img src="/Frontend/images/iconos/conservacion.png" alt="Conservacion" width="30" height="30">
+                <img src="/Frontend/images/iconos/conservacion.png" alt="Conservación" width="30" height="30">
                 <div class="content-characteristic">
                     <label for="">Estado de Conservación</label>
-                    <p>Vulnerable, amenazado por la pérdida de hábitat y caza furtiva.</p>
+                    <p>Algunas especies están en peligro debido a la caza y la pérdida de hábitat.</p>
                 </div>
             </div>
         </div>
@@ -105,13 +103,13 @@
             <div id="carouselExample" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/Frontend/images/OsoAnteojos.jpg" class="d-block w-100" alt="Oso de Anteojos 1">
+                    <img src="/Frontend/images/ListaAnimales/Armadillo.jpg" class="d-block w-100" alt="Armadillo 1">
                 </div>
                 <div class="carousel-item">
-                    <img src="/Frontend/images/oso2.jfif" class="d-block w-100" alt="Oso de Anteojos 2">
+                    <img src="/Frontend/images/ListaAnimales/armadillo(1).jpg" class="d-block w-100" alt="Armadillo 2">
                 </div>
                 <div class="carousel-item">
-                    <img src="/Frontend/images/Oso1.jpg" class="d-block w-100" alt="Oso de Anteojos 3">
+                    <img src="/Frontend/images/ListaAnimales/armadillo2.jpg" class="d-block w-100" alt="Armadillo 3">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
@@ -127,12 +125,12 @@
     <!-- Columna derecha con el texto de curiosidades -->
     <div class="col-md-6">
         <div class="curiosidades">
-                <h3>Curiosidades del Oso de Anteojos</h3>
-                <p>1. El oso de anteojos es el único oso nativo de América del Sur.</p>
-                <p>2. Su nombre se debe a las marcas blancas alrededor de sus ojos que parecen gafas.</p>
-                <p>3. Viven en las montañas andinas, principalmente en bosques nubosos y páramos.</p>
-                <p>4. Son omnívoros, con una dieta que incluye frutas, plantas, insectos, y pequeños animales.</p>
-                <p>5. Son una especie en peligro de extinción debido a la pérdida de hábitat y la caza ilegal.</p>
+                <h3>Curiosidades del Armadillo</h3>
+                <p>1. Los armadillos pueden enrollarse en una bola como mecanismo de defensa.</p>
+                <p>2. Son los únicos mamíferos que tienen un caparazón duro.</p>
+                <p>3. Algunas especies pueden excavar madrigueras de hasta 5 metros de profundidad.</p>
+                <p>4. Se alimentan de una amplia variedad de insectos y pequeños invertebrados.</p>
+                <p>5. Son importantes para los ecosistemas, ya que controlan poblaciones de insectos.</p>
                 </div>
             </div>
         </div>
