--- a/Frontend/html/Animal.html
+++ b/Frontend/html/Animal.html
@@ -140,7 +140,7 @@
 
     <!-- Sección del Hábitat -->
     <section id="habitats">
-        <h3>Hábitat</h3>
+        <h3>Lugar Donde se encuentra</h3>
         <div class="content-habitat">
             <div class="mapa">
                 <svg version="1.2" viewbox="0 0 1000 1000" xmlns="http://www.w3.org/2000/svg">
