Actualizacion de barra de nav index

--- a/Frontend/html/Animal.html
+++ b/Frontend/html/Animal.html
@@ -35,7 +35,7 @@
     </section>
     <!-- Descripción general y Características -->
     <section class="content">
-        <div class="column">
+        <div class="column" id="descripcionGeneral1">
             <h3>Descripción General</h3>
             <p>El Oso de Anteojos (<i>Tremarctos ornatus</i>) es el único oso nativo de América del Sur. 
             Se distingue por las marcas blancas alrededor de sus ojos que le dan apariencia de "anteojos".
