--- a/Frontend/html/ListaAnimales.html
+++ b/Frontend/html/ListaAnimales.html
@@ -9,7 +9,9 @@
 <body>
     <header>
         <nav class="navigation-bar">
-            <div class="logo">Fauna Colombiana</div>
+            <div class="logo">
+                <a href="index.html">Fauna Colombiana</a>
+            </div>
             <ul class="nav-links">
                 <li><a href="#habitats">Hábitats</a></li>
                 <li><a href="#sobre-nosotros">Sobre Nosotros</a></li>
@@ -86,6 +88,5 @@
             <p>Oriente Colombiano</p>
         </a>
     </section>
-    
 </body>
 </html>
