--- a/Frontend/html/index.html
+++ b/Frontend/html/index.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     <header>
-        <nav>
-            <div class="logo">Fauna Colombiana</div>
-            <ul>
-                <li><a href="#" class="sitios">Hábitats</a></li>
-                <li><a href="#end" class="informacion">Sobre Nosotros</a></li>
-                <li><a href="/Frontend/html/Animal.html" class="but-animal">Animales</a></li>
+        <nav class="navigation-bar">
+            <div class="logo">
+                <a href="index.html">Fauna Colombiana</a>
+            </div>
+            <ul class="nav-links">
+                <li><a href="#habitats">Hábitats</a></li>
+                <li><a href="#sobre-nosotros">Sobre Nosotros</a></li>
+                <li><a href="/Frontend/html/ListaAnimales.html" class="btn-animales">Animales</a></li>
             </ul>
         </nav>
     </header>
