Modificacion padding de index

--- a/Frontend/html/Animal.html
+++ b/Frontend/html/Animal.html
@@ -17,7 +17,9 @@
 <body>
     <!-- Barra de navegación -->
     <nav class="navigation-bar">
-        <div class="logo">Fauna Colombiana</div>
+        <div class="logo">
+            <a href="/Frontend/html/index.html">Fauna Colombiana</a>
+        </div>
         <ul class="nav-links">
             <li><a href="#habitats">Hábitats</a></li>
             <li><a href="#sobre-nosotros">Sobre Nosotros</a></li>
