--- a/Frontend/html/index.html
+++ b/Frontend/html/index.html
@@ -23,15 +23,15 @@
 
     <main>
         <section class="cita">
-            <div class="imagenes">
-                <img src="/Frontend/images/Jaguar.png" alt="">
+            <div class="imagenes" id="Jaguar">
+                <img src="/Frontend/images/Jaguar1.png" alt="">
             </div>
             <div class="contenido">
                 <h1>Descubre una Colombia salvaje llena de criaturas fantásticas y sorprendentes</h1>
                 <a href="ListaAnimales.html" class="but-exp">Explora</a>
             </div>
-            <div class="imagenes">
-                <img src="/Frontend/images/Guacamaya.png" alt="">
+            <div class="imagenes" id="Guacamaya1">
+                <img src="/Frontend/images/Guacamaya1.png" alt="">
             </div>
         </section>
 
