--- a/Frontend/html/Animal.html
+++ b/Frontend/html/Animal.html
@@ -12,7 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <title>Oso de Anteojos</title>
+    <title>Detalles del Animal</title>
 </head>
 <body>
     <!-- Barra de navegación -->
@@ -29,21 +29,20 @@
 
     <!-- Imagen del animal con nombre encima -->
     <section class="Img-animal">
-        <img src="/Frontend/images/OsoAnteojos.jpg" alt="Oso de Anteojos">
+        <img id="animal-img" src="/Frontend/images/default.jpg" alt="Imagen del Animal">
         <div class="nombre">
-            <h1>Oso de Anteojos</h1>
-            <h2><i>Tremarctos ornatus</i></h2>
+            <h1 id="animal-nombre">Nombre Común</h1>
+            <h2 id="animal-nombre-cientifico"><i>Nombre Científico</i></h2>
         </div>
     </section>
+
     <!-- Descripción general y Características -->
     <section class="content">
         <div class="column" id="descripcionGeneral1">
             <h3>Descripción General</h3>
-            <p>El Oso de Anteojos (<i>Tremarctos ornatus</i>) es el único oso nativo de América del Sur. 
-            Se distingue por las marcas blancas alrededor de sus ojos que le dan apariencia de "anteojos".
-            Habita en los bosques andinos de Colombia y otros países, alimentándose principalmente 
-            de frutas y plantas. Es una especie solitaria y nocturna, catalogada como vulnerable 
-            debido a la pérdida de su hábitat.</p>
+            <p id="descripcion-general">
+                Aquí aparecerá la descripción general del animal.
+            </p>
         </div>
         
         <div class="column">
@@ -51,90 +50,78 @@
                 <img src="/Frontend/images/iconos/Tamaño.png" alt="Tamaño" width="25" height="25">
                 <div class="content-characteristic">
                     <label>Tamaño:</label>
-                    <p>Entre 1.5 m y 2 m de largo.</p>
+                    <p id="animal-tamano">-</p>
                 </div>
             </div>
             <div class="characteristic">
                 <img src="/Frontend/images/iconos/Peso.png" alt="Peso" width="30" height="30">
                 <div class="content-characteristic">
                     <label for="">Peso:</label>
-                    <p>Entre 100 y 175 kg.</p> 
+                    <p id="animal-peso">-</p> 
                 </div>
             </div>
             <div class="characteristic">
                 <img src="/Frontend/images/iconos/Colores.png" alt="Coloración" width="30" height="30">
                 <div class="content-characteristic">
                     <label for="">Coloración</label>
-                    <p>Pelaje negro con marcas blancas o beige en el rostro y pecho.</p>
+                    <p id="animal-coloracion">-</p>
                 </div>
             </div>
             <div class="characteristic">
-                <img src="/Frontend/images/iconos/world.png" alt="Habitats" width="30" height="30">
+                <img src="/Frontend/images/iconos/world.png" alt="Hábitats" width="30" height="30">
                 <div class="content-characteristic">
                     <label for="">Hábitat</label>
-                    <p>Bosques nublados y páramos andinos.</p>
+                    <p id="animal-habitat">-</p>
                 </div>
             </div>
             <div class="characteristic">
                 <img src="/Frontend/images/iconos/Comida.png" alt="Dieta" width="30" height="30">
                 <div class="content-characteristic">
                     <label for="">Dieta</label>
-                    <p>Principalmente herbívoro, consumiendo frutas, hojas y cortezas.</p>
+                    <p id="animal-dieta">-</p>
                 </div>
             </div>
             <div class="characteristic">
-                <img src="/Frontend/images/iconos/moon.png" alt="Luna" width="35" height="35">
+                <img src="/Frontend/images/iconos/moon.png" alt="Comportamiento" width="35" height="35">
                 <div class="content-characteristic">
                     <label for="">Comportamiento</label>
-                    <p>Solitario y de hábitos nocturnos.</p>
+                    <p id="animal-comportamiento">-</p>
                 </div>
             </div>
             <div class="characteristic">
-                <img src="/Frontend/images/iconos/conservacion.png" alt="Conservacion" width="30" height="30">
+                <img src="/Frontend/images/iconos/conservacion.png" alt="Estado de Conservación" width="30" height="30">
                 <div class="content-characteristic">
                     <label for="">Estado de Conservación</label>
-                    <p>Vulnerable, amenazado por la pérdida de hábitat y caza furtiva.</p>
+                    <p id="animal-conservacion">-</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Carrusel de Imagenes con boostrap-->
+    <!-- Carrusel de Imágenes con Bootstrap -->
     <div class="container mt-5 mb-5 fondo-contenedor">
         <div class="row row-contenido">
             <!-- Columna izquierda con el carrusel -->
-        <div class="col-md-6">
-            <div id="carouselExample" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="/Frontend/images/OsoAnteojos.jpg" class="d-block w-100" alt="Oso de Anteojos 1">
-                </div>
-                <div class="carousel-item">
-                    <img src="/Frontend/images/oso2.jfif" class="d-block w-100" alt="Oso de Anteojos 2">
-                </div>
-                <div class="carousel-item">
-                    <img src="/Frontend/images/Oso1.jpg" class="d-block w-100" alt="Oso de Anteojos 3">
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
+            <div class="col-md-6">
+                <div id="carouselExample" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner" id="carousel-inner">
+                        <!-- Las imágenes se agregarán dinámicamente -->
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="sr-only">Anterior</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExample" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Siguiente</span>
-            </a>
-        </div>
-    </div>
-    <!-- Columna derecha con el texto de curiosidades -->
-    <div class="col-md-6">
-        <div class="curiosidades">
-                <h3>Curiosidades del Oso de Anteojos</h3>
-                <p>1. El oso de anteojos es el único oso nativo de América del Sur.</p>
-                <p>2. Su nombre se debe a las marcas blancas alrededor de sus ojos que parecen gafas.</p>
-                <p>3. Viven en las montañas andinas, principalmente en bosques nubosos y páramos.</p>
-                <p>4. Son omnívoros, con una dieta que incluye frutas, plantas, insectos, y pequeños animales.</p>
-                <p>5. Son una especie en peligro de extinción debido a la pérdida de hábitat y la caza ilegal.</p>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExample" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Siguiente</span>
+                    </a>
+                </div>
+            </div>
+            <!-- Columna derecha con texto de curiosidades -->
+            <div class="col-md-6">
+                <div class="curiosidades" id="curiosidades-container">
+                    <h3>Curiosidades del Animal</h3>
+                    <!-- Las curiosidades se agregarán dinámicamente -->
                 </div>
             </div>
         </div>
@@ -365,6 +352,6 @@
     <footer>
         <p>© 2024 Fauna Colombiana. Todos los derechos reservados.</p>
     </footer>
-
+    <script src="/Frontend/js/animal.js"></script>
 </body>
 </html>
