Caracteristicas y slide resuelto

--- a/Frontend/html/ListaAnimales.html
+++ b/Frontend/html/ListaAnimales.html
@@ -101,5 +101,14 @@
         </script>
         
     </section>
+    <section class="pagination">
+        <button id="prevPage" disabled>Anterior</button>
+        <span id="pageInfo">Página 1</span>
+        <button id="nextPage">Siguiente</button>
+    </section>
+    
+    <footer>
+        <p>© 2024 Fauna Colombiana. Todos los derechos reservados.</p>
+    </footer>
 </body>
 </html>
